# sauvc-thruster-lib

./: CMakeLists.txt  README.md
config/: config.h
deploy/: motor_controller.h  motor_driver.cpp  motor_driver.h
deploy/lib/SAUVC2020_library/: motor_controller.cpp  motor_controller.h  motor_driver.cpp  motor_driver.h
deploy/lib/SAUVC2020_library/config/: config.h
deploy/lib/sauvc-thruster-lib/: auv.cpp  auv.h  thruster.cpp  thruster.h  thruster_aggregator.cpp  thruster_aggregator.h
deploy/lib/sauvc-thruster-lib/config/: config.h
deploy/lib/sauvc2020-motor-lib/: motor_controller.cpp  motor_controller.h  motor_driver.cpp
deploy/scripts/: SAUVC2020.ino
deploy/scripts/component-based-test-script/: component-based-test-script.ino  depth_sensor_config.h
deploy/scripts/friday-13mar-test-script/: config.h  depth_sensor_config.h  friday-13mar-test-script.ino
deploy/scripts/friday-20mar-test-script/: depth_sensor_config.h  friday-20mar-test-script.ino
deploy/scripts/friday-test-script/: depth_sensor_config.h  friday-test-script.ino
deploy/scripts/imu-motor-integration-test-script/: imu-motor-integration-test-script.ino
deploy/scripts/ros-communication-test/: ros-communication-test.ino
deploy/scripts/rosserial_arduino_subscriber_example/: rosserial_arduino_subscriber_example.ino
deploy/scripts/thrusters-imu-integration-test/: thrusters-imu-integration-test.ino
deploy/scripts/tuesday-test-script/: tuesday-test-script.ino  tuesday_test.ino
deploy/scripts/video-filming-script/: depth_sensor_config.h  video-filming-script.ino
deploy/scripts/wednesday-test-script/: config.h  depth_sensor_config.h  wednesday-test-script.ino
diagram/: design-notes.drawio
src/: CMakeLists.txt  auv.cpp  auv.h  motor_controller.cpp  motor_controller.h  motor_driver.cpp  motor_driver.h  thruster.cpp  thruster.h  thruster_aggregator.cpp  thruster_aggregator.h
tests/: CMakeLists.txt  auv_test.cpp  main.cpp  motor_controller_test.cpp  motor_driver_test.cpp  thruster_aggregator_test.cpp  thruster_test.cpp
(+8 files in other folders)
